# SigmaNova

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  PERFORMANCE.md  README.md  reflection-2026-07-03.md  sigmanova_resume_notes.txt  vcpkg.json
reports/: optimization.md
shaders/: bloom_composite.frag  blur.frag  bright_extract.frag  fullscreen.frag  fullscreen.vert  grid.frag  grid.vert  hud.frag  hud.vert  sky.frag  triangle.frag  triangle.vert  volume_composite.frag
src/: Shader.h  camera.cpp  camera.h  main.cpp  shader.cpp  shader.h
